React traning WIP

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 
 <!-- Your HTML goes here -->
 
-<script src="js/index.js"></script>
+<body>
+    <div id="main"></div>
+</body>
 
+<script src="js/index.js"></script>
